# pkg/api/workload_config.go
@@ -46,10 +46,13 @@ func (h *WorkloadConfigHandler) Create(c *gin.Context) {
 		ApplicationID: req.ApplicationID,
 		EnvironmentID: req.EnvironmentID,
 		Name:          req.Name,
+		Description:   req.Description,
 		Replicas:      req.Replicas,
+		Exposed:       req.Exposed,
 		Resources:     req.Resources,
 		Probes:        req.Probes,
 		Env:           req.Env,
+		Labels:        req.Labels,
 		WorkloadType:  req.WorkloadType,
 		Strategy:      req.Strategy,
 	}
@@ -107,10 +110,13 @@ func (h *WorkloadConfigHandler) Update(c *gin.Context) {
 		ApplicationID: req.ApplicationID,
 		EnvironmentID: req.EnvironmentID,
 		Name:          req.Name,
+		Description:   req.Description,
 		Replicas:      req.Replicas,
+		Exposed:       req.Exposed,
 		Resources:     req.Resources,
 		Probes:        req.Probes,
 		Env:           req.Env,
+		Labels:        req.Labels,
 		WorkloadType:  req.WorkloadType,
 		Strategy:      req.Strategy,
 	}
